# learning-deep-learning

./: README.md  c01.py  c01e01-perceptron-basics.py  c01e02-perceptron-learning.py  c01e03-perceptron-plotting.py  pyproject.toml
ldl/: c01.py
test/: c01_test.py
